# Gates

./: .gitignore  CMakeLists.txt  Gates.pro  PLAN.md  QmlEngine.cpp  QmlEngine.h  README.md  main.cpp
cmake/: FindQt.cmake  gates-deploy.cmake
cpp/Config/: ConfigManager.cpp  ConfigManager.h
cpp/Core/: GatesFrameDispatcher.cpp  GatesFrameDispatcher.h  TrayIcon.cpp  TrayIcon.h
cpp/Custom/: qsettings_toml.cpp  qsettings_toml.hpp
cpp/CustomQmlTypes/: DesktopService.cpp  DesktopService.h  DirEntryModel.cpp  DirEntryModel.h  DragDropService.cpp  DragDropService.h  FileSystemModel.cpp  FileSystemModel.h  GatesFrameState.h  IconProvider.cpp  IconProvider.h  ResizableFramelessWindow.cpp  ResizableFramelessWindow.h  RoundedRect.h  SelectionService.cpp  SelectionService.h
cpp/FileSystem/: FileSystemEntry.cpp  FileSystemEntry.h
cpp/Foreign/: GatesFrameForeign.cpp  GatesFrameForeign.h
cpp/Settings/: SettingsBackend.cpp  SettingsBackend.h  SettingsController.cpp  SettingsController.h
cpp/Shell/: DesktopConfigBridge.cpp  DesktopConfigBridge.h  DesktopFolderLocator.cpp  DesktopFolderLocator.h  DesktopIconModel.cpp  DesktopIconModel.h  DesktopLayer.cpp  DesktopLayer.h  DesktopShellManager.cpp  DesktopShellManager.h  ShellContextMenu.cpp  ShellContextMenu.h  ShellFolderView.cpp  ShellFolderView.h  WindowHelper.cpp  WindowHelper.h
cpp/Widgets/: defs.h
cpp/utilities/BlurBehindHelper/: BlurBehindHelper.cpp
cpp/utilities/DesktopIconsHelper/: DesktopIconsHelper.cpp  DesktopIconsHelper.h
cpp/utilities/FileIconManager/: FileIconProvider.cpp  FileIconProvider.h
cpp/utilities/win/: Functions.h  WinStructs.h  shellqt.cpp  shellqt.h  util.hpp  util_icons.cpp
docker/claude/: Dockerfile  entrypoint.sh
qml/: CustomButton.qml  DragGhost.qml  Frame.qml  FrameNameBar.qml  GatesFrame.qml  GatesGridViewDelegate.qml  IconDelegate.qml  IconGridView.qml  Main.qml  NameBarCustomButton.qml  SettingsPageAbout.qml  SettingsPageDesktop.qml  SettingsPageFrames.qml  SettingsSpinBox.qml  SettingsWindow.qml  VirtualDesktop.qml  testFrame.qml
src/: _basic_frame.cpp  _basic_frame.h  _icon.cpp  _icon.h  abstractframe.cpp  abstractframe.h  contextmenu.cpp  contextmenu.h  desktopframe.cpp  desktopframe.h  dirview.cpp  dirview.h  dirview.h.autosave  dirviewitemdelegate.cpp  dirviewitemdelegate.h  dragabble_widget.cpp  dragabble_widget.h  frame.cpp  frame.h  frameshandler.cpp  frameshandler.h  gatesframe.cpp  gatesframe.h  gatesframe.h.autosave  icon.cpp  icon.h  iconview.cpp  iconview.h  main.cpp  mainwindow.cpp  manager.cpp  manager.h  namebar.cpp  namebar.h  resizable.cpp  resizable.h  settingsmanager.cpp  settingsmanager.h  systemtray.cpp  systemtray.h
utilities/: QtIconProviderExample.cpp  contexmenu.cpp  contexmenu.h  icon.h  shellqt.cpp  shellqt.h
